[project]
name = "autodev-agents"
version = "0.1.0"
description = ""
authors = [{ name = "isms01", email = "ishimasa01@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["langchain (>=0.3.26,<0.4.0)", "langchain-community (>=0.3.27,<0.4.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autodev-agents"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
